--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon titre</title>
     <!-- Intégration Bootstrap -->
-     
-     <!-- Votre CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">cd
+    <!-- Votre CSS -->
      
 </head>
 <body>
     <!-- MENU / NAVBAR -->
     <!-- Chaque entrée du menu doit mener à une section de la landing page -->
-
+    <nav>
+        <ul>
+            <li><img src="./img/logo-xs-svg.png" alt="Logo"></li>
+            <li><h1>Le jeu évènement</h1></li>
+            <li><a href="#entrer">Entrer</a></li>
+            <li><a href="#decovrir">DECOUVRIR</a></li>
+            <li><a href="#equiper">S'EQUIPER</a></li>
+            <li><a href="#plus">PLUS</a></li>
+        </ul>
+    </nav>
 
 
     <!-- CAROUSEL -->
