--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <!-- Chaque entrée du menu doit mener à une section de la landing page -->
     <nav id="navbar">
         <ul id="menu">
-            <li><img  src="./img/logo-xs-svg.png" alt="Logo" width="90px"></li>
+            <li><img  src="./img/logo-xs-svg.png" alt="Logo" width="150px"></li>
             <li><h1 id="titre">Le jeu évènement</h1></li>
-            <li><a class="links" href="#entrer">ENTRER</a></li>
-            <li><a class="links" href="#decovrir">DECOUVRIR</a></li>
-            <li><a class="links" href="#equiper">S'EQUIPER</a></li>
-            <li><a class="links" href="#plus">PLUS</a></li>
+            <div id="list">
+                <li><a class="links" href="#entrer">ENTRER</a></li>
+                <li><a class="links" href="#decovrir">DECOUVRIR</a></li>
+                <li><a class="links" href="#combattre">COMBATTRE</a></li>
+                <li><a class="links" href="#equiper">S'EQUIPER</a></li>
+                <li><a class="links" href="#plus">PLUS</a></li>
+            </div>
         </ul>
     </nav>
 
@@ -34,9 +37,20 @@
         - zelda-header-g.jpg
 
     -->
-   
-    <section id="entrer">
+    <section id="carousel">
+        <img src="./img/zelda-header-main.jpg" alt="image1">
+        <!-- <img src="./img/zelda-header-d.jpg" alt="image2">
+        <img src="./img/zelda-header-f.jpg" alt="image3">
+        <img src="./img/zelda-header-g.jpg" alt="image4"> -->
+    </section>
 
+    <section id="entrer">
+        <div>
+            <h2>Entrer dans un monde d'aventure</h2>
+        </div>
+        <div>           
+            <p>Oubliez tout ce que vous savez sur les jeux The Legend of Zelda, Plongez dans un monde de découverte, d'exploration et d'aventure dans <span>The legend of Zelda: Breath of the Wild</span> un nouveau jeu qui vient bloueverser la série à succès</p>
+        </div>
     </section>
 
       <!-- SECTION #1 - BASIC -->
@@ -83,6 +97,5 @@
     <!-- FOOTER FLEX -->
     <!-- La flèche renvoie en haut de page -->
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
