Modify html & css

--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
     </section>
 
     <section id="entrer">
-        <div>
+        <div id="title">
             <h2>Entrer dans un monde d'aventure</h2>
         </div>
         <div>           
-            <p>Oubliez tout ce que vous savez sur les jeux The Legend of Zelda, Plongez dans un monde de découverte, d'exploration et d'aventure dans <span>The legend of Zelda: Breath of the Wild</span> un nouveau jeu qui vient bloueverser la série à succès</p>
+            <p>Oubliez tout ce que vous savez sur les jeux The Legend of Zelda, Plongez dans un monde de découverte, d'exploration et d'aventure
+            </p> 
+            <p>dans <span>The legend of Zelda: Breath of the Wild</span> un nouveau jeu qui vient bloueverser la série à succès
+            </p>
         </div>
     </section>
 
