--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
           jeu qui vient bloueverser la série à succès
       </div>
       <div class="section">
-        <img src="./img/zelda-link-cheval.png" alt="cheval">
-        <h2>Ouvre les yeux</h2>
+        <div>
+          <img src="./img/zelda-link-cheval.png" alt="cheval">
+        </div>
+        <div class="content">
+          <h2>Ouvre les yeux</h2>
+          <div class="hl-arrow"></div>
+        </div>
       </div>
     </section>
 
